[Home]

Summary:ASTERISK-28106: Astricon Feedback: Unable to filter ARI events when GETting causes overload of events
Reporter:George Joseph (gjoseph)Labels:
Date Opened:2018-10-15 07:15:21Date Closed:2019-02-20 10:38:34.000-0600
Priority:MajorRegression?
Status:Closed/CompleteComponents:Resources/res_ari
Versions:13.23.1 GIT 16.0.0 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:There's no way to get only a certain subset of ARI events when GETting them and since most applications don't need all events, it's causing excess resource utilization in stasis apps.  

Provide a way, either in the URL or a POSTed document, to filter events.
Some combination of...
Include/Exclude, Patterns/Globs, etc.

Filtering in stasis.conf isn't usable for this issue because it's global.


Comments:By: Friendly Automation (friendly-automation) 2019-02-20 10:38:35.121-0600

Change 10980 merged by George Joseph:
ARI event type filtering

[https://gerrit.asterisk.org/10980|https://gerrit.asterisk.org/10980]

By: Friendly Automation (friendly-automation) 2019-02-20 10:38:44.921-0600

Change 10982 merged by George Joseph:
ARI event type filtering

[https://gerrit.asterisk.org/10982|https://gerrit.asterisk.org/10982]

By: Friendly Automation (friendly-automation) 2019-02-20 10:38:57.082-0600

Change 10978 merged by George Joseph:
ARI event type filtering

[https://gerrit.asterisk.org/10978|https://gerrit.asterisk.org/10978]

By: Kevin Harwell (kharwell) 2019-02-20 11:29:22.631-0600

asterisk-dev [discussion|http://lists.digium.com/pipermail/asterisk-dev/2018-December/077128.html]